# functions/src/routes/chatsRouter.js
@@ -1,15 +1,17 @@
 const express = require("express");
 
-const chatsController = require("../controllers/chatsController.js");
+const chatsController = require("../controllers/chatsController");
 
 const chatsRouter = express.Router();
 
-chatsRouter.get("/", chatsController.getAllchats);
+chatsRouter.get("/:chatId", chatsController.getSingleChat);
 
-chatsRouter.get("/chats/:chatId", chatsController.getSinglechat);
+chatsRouter.get("/", chatsController.getAllChats);
 
-chatsRouter.post("/chats", chatsController.addchats);
+chatsRouter.post("/", chatsController.addChat);
 
+chatsRouter.patch("/:chatId", chatsController.updateChat);
 
+chatsRouter.delete("/:chatId", chatsController.deleteChat);
 
 module.exports = chatsRouter;
